2001-07-03  Clint Adams  <clint@zsh.org>

	* 15234: Doc/Zsh/mod_pcre.yo: describe
	behavior introduced by 15228.

	* 15228: zshconfig.ac, Src/Modules/pcre.c:
	switch AC_CHECK_LIB to AC_SEARCH_LIBS for pcre.
	Have pcre_match set positional parameters
	with the contents of capture buffers.

2001-07-03  Clint Adams  <clint@zsh.org>

	* unposted: Doc/Makefile.in: add mod_pcre.yo to makefile.

2001-07-03  Oliver Kiddle  <opk@zsh.org>

	* 15223, Akinori Musha: 15215: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_sysctl: Add completion for sysctl(8)

2001-07-03  Clint Adams  <clint@zsh.org>

	* unposted: Doc/Zsh/.distfiles,
	Functions/Example/.distfiles, Src/Modules/.distfiles:
	update distfiles for 15211.

2001-07-02  Bart Schaefer  <schaefer@zsh.org>

	* unposted: zshconfig.ac: Remove references to FUNCINST_MK.

2001-07-02  Clint Adams  <clint@zsh.org>

	* 15211: zshconfig.ac, Doc/Zsh/mod_pcre.yo,
	Functions/Example/zpgrep, Src/Modules/pcre.c,
	Src/Modules/pcre.mdd: interface to PCRE library.

2001-07-02  Oliver Kiddle  <opk@zsh.org>

	* 15204: zshconfig.ac, Src/compat.c, Src/params.c: fix compilation
	problems on IRIX 5.3 and correct error messages

2001-07-02  Bart Schaefer  <schaefer@zsh.org>

	* 15198: Completion/Zsh/Context/_tilde: Return nonzero if no
	matches are found.

2001-06-30  Bart Schaefer  <schaefer@zsh.org>

	* 15191: Src/init.c: Don't infinite loop if there's an error in
	the user's precmd -- reset errflag after preprompt().

2001-06-29  Andrej Borsenkow  <bor@zsh.org>

	* 15183: zshconfig.ac: fix DLLD in non-ELF case

	* 15181: zshconfig.ac: use -KPIC instead of -Kpic at request
	of Tomi Vainio <Tomi.Vainio@Sun.COM>

	* 15180: zshconfig.ac, Etc/MACHINES: make AIX default to termcap
	as workaround for apparent AIX curses bug; add flags to create
	modules with shared object type. Mention curses problem.

2001-06-29  Clint Adams  <clint@zsh.org>

	* Bart: 15083 plus comments: Functions/Zle/bash-backward-kill-word: