@@ -15,12 +15,13 @@ Studies the previously-compiled PCRE which may result in faster
 matching.
 )
 findex(pcre_match)
-item(tt(pcre_match) var(string))(
+item(tt(pcre_match) [ tt(-a) var(arr) ] var(string))(
 Returns successfully if tt(string) matches the previously-compiled
 PCRE.
 
 If the expression captures substrings within parentheses,
-tt(pcre_match) will set the positional parameters to
-those substrings, starting with $1 for the first.
+tt(pcre_match) will set the array var($match) to those
+substrings, unless the tt(-a) option is given, in which
+case it will set the array var(arr).
 )
 enditem()
